# sindarin

./: .gitignore  CLAUDE.md  Makefile  Plans.md  README.ko.md  README.md  alembic.ini  env.example  env.prod.example  env.staging.example  harness.toml  pyproject.toml  pytest.ini
.claude-plugin/: plugin.json  settings.json
.claude/memory/: decisions.md  patterns.md  session-log.md
apps/api/: pyproject.toml
apps/api/app/: __init__.py  auth.py  config.py  db.py  event_log.py  ingest.py  insight.py  main.py  rag.py  reindex.py  repository.py  schemas.py
apps/api/app/routers/: admin.py  auth.py  chat.py  documents.py  dsr.py  health.py  upload.py
apps/api/tests/: test_chat_endpoint.py  test_endpoint_auth.py  test_health.py  test_rag_factory.py  test_reindex.py
apps/web/: eslint.config.mjs  next.config.mjs  package-lock.json  package.json  vitest.config.ts  vitest.setup.ts
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/app/admin/: page.tsx
apps/web/src/app/audit/compliance/: page.tsx
apps/web/src/app/audit/dsr/: page.tsx
apps/web/src/app/audit/trail/: page.tsx
apps/web/src/app/ops/health/: page.tsx
apps/web/src/app/ops/logs/: page.tsx
apps/web/src/app/policy/documents/: page.tsx
apps/web/src/app/policy/guardrails/: page.tsx
apps/web/src/components/: ActivityLogs.tsx  AdminDashboard.test.tsx  AdminDashboard.tsx  AppShell.tsx  AuditTrail.tsx  AuthGate.test.tsx  AuthGate.tsx  ChatWorkspace.test.tsx  ChatWorkspace.tsx  CitationChip.tsx  CompliancePage.tsx  DocumentLibrary.test.tsx  DocumentLibrary.tsx  DocumentsAclPage.tsx  DsrPage.tsx  ForceGraph.tsx  GuardrailsPage.tsx  InsightPanel.test.tsx  InsightPanel.tsx  PreviewPane.test.tsx  PreviewPane.tsx  SessionContext.tsx  Workspace.tsx
apps/web/src/lib/: api.ts
docs/: OVERVIEW.md  PRD2.md  harness.md
docs/adr/: README.md
docs/architecture/: overview.md
docs/runbooks/: README.md  go-live.md  nemotron-phase0.md
infra/compose/: dev.yml  llm.yml  prod.yml  staging.yml  test.yml
infra/docker/: api.Dockerfile  web.Dockerfile  worker.Dockerfile
infra/harness/: pipeline.yml
infra/migrations/: README.md  env.py
infra/migrations/versions/: 0358ed063ee1_add_document_chunks_e6_e7_corpus.py  991a1ccfea70_initial_schema_prd2_6_2.py  991c8ae37ffc_add_document_blocks_seq_section_path_.py  a5e8e247a5a0_add_users_password_hash_adr_0005.py  b6d2e1a7f3c4_acl_backfill_role_user.py  c7e9a1f04321_audit_observability_classification.py  d142b8071fae_guardrail_overrides_gp4.py  e3f1c2b8a4d7_acl_typed_principals.py  f9a4d8c1e527_dsr_requests_gp4.py
infra/scripts/: deploy.sh  rollback.sh  smoke.sh
tests/: conftest.py
tests/e2e/smoke/: test_smoke.py
tests/eval/: test_eval_gate.py  thresholds.toml
tests/fixtures/: README.md
tests/fixtures/ir/: hwpx.json  markitdown_docx.json  markitdown_xlsx.json  paddleocr_vl_pdf.json
tests/integration/: test_admin.py  test_auth_flow.py  test_ingest_chat.py  test_qdrant_store.py
tests/unit/: _ragkit.py  test_auth.py  test_document_ir.py  test_guardrails.py  test_hwpx_worker.py  test_indexing.py  test_insight.py  test_ir_validator.py  test_markitdown_worker.py  test_ocr_worker.py  test_openai_wiring.py  test_rag_pipeline.py
workers/embedding_worker/: pyproject.toml
workers/embedding_worker/embedding_worker/: __init__.py
workers/eval_worker/: pyproject.toml
workers/eval_worker/eval_worker/: __init__.py
workers/hwpx_worker/: pyproject.toml
workers/hwpx_worker/hwpx_worker/: __init__.py  keywords.py  metadata.py  package.py  parser.py
workers/markitdown_worker/: pyproject.toml
workers/markitdown_worker/markitdown_worker/: __init__.py  converter.py  mapper.py
workers/ocr_worker/: pyproject.toml
workers/ocr_worker/ocr_worker/: __init__.py  classifier.py  engine.py
