[project]
name = "hybrid-idp-embedding-worker"
version = "0.0.0"
description = "Chunking + embedding + vector indexing with versioning (ADR-0008, PRD2 §6.3)"
requires-python = ">=3.12"
# Embeddings are generated via the OpenAI-compatible client (ADR-0001).
dependencies = ["document-ir", "rag-core", "hybrid-idp-shared", "openai>=1.40"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["embedding_worker"]
