[project]
name = "hybrid-idp-eval-worker"
version = "0.0.0"
description = "Citation, groundedness, and retrieval eval (PRD2 §7, §10.2)"
requires-python = ">=3.12"
dependencies = ["document-ir", "rag-core", "hybrid-idp-shared", "openai>=1.40"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["eval_worker"]
